// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Stateful async tests Merges skipped validations from previous suite 1`] = `
{
  "done": [Function],
  "errorCount": 1,
  "getError": [Function],
  "getErrors": [Function],
  "getErrorsByGroup": [Function],
  "getWarning": [Function],
  "getWarnings": [Function],
  "getWarningsByGroup": [Function],
  "groups": {
    "group": {
      "field_1": {
        "errorCount": 0,
        "errors": [],
        "testCount": 0,
        "valid": false,
        "warnCount": 0,
        "warnings": [],
      },
      "field_4": {
        "errorCount": 0,
        "errors": [],
        "testCount": 0,
        "valid": false,
        "warnCount": 0,
        "warnings": [],
      },
    },
  },
  "hasErrors": [Function],
  "hasErrorsByGroup": [Function],
  "hasWarnings": [Function],
  "hasWarningsByGroup": [Function],
  "isValid": [Function],
  "isValidByGroup": [Function],
  "suiteName": undefined,
  "testCount": 3,
  "tests": {
    "field_1": {
      "errorCount": 1,
      "errors": [
        "field_message_1",
      ],
      "testCount": 1,
      "valid": false,
      "warnCount": 0,
      "warnings": [],
    },
    "field_2": {
      "errorCount": 0,
      "errors": [],
      "testCount": 2,
      "valid": false,
      "warnCount": 0,
      "warnings": [],
    },
    "field_3": {
      "errorCount": 0,
      "errors": [],
      "testCount": 0,
      "valid": false,
      "warnCount": 0,
      "warnings": [],
    },
    "field_4": {
      "errorCount": 0,
      "errors": [],
      "testCount": 0,
      "valid": false,
      "warnCount": 0,
      "warnings": [],
    },
  },
  "valid": false,
  "warnCount": 0,
}
`;

exports[`Stateful async tests Merges skipped validations from previous suite 2`] = `
{
  "errorCount": 2,
  "getError": [Function],
  "getErrors": [Function],
  "getErrorsByGroup": [Function],
  "getWarning": [Function],
  "getWarnings": [Function],
  "getWarningsByGroup": [Function],
  "groups": {
    "group": {
      "field_1": {
        "errorCount": 0,
        "errors": [],
        "testCount": 0,
        "valid": false,
        "warnCount": 0,
        "warnings": [],
      },
      "field_4": {
        "errorCount": 0,
        "errors": [],
        "testCount": 0,
        "valid": false,
        "warnCount": 0,
        "warnings": [],
      },
    },
  },
  "hasErrors": [Function],
  "hasErrorsByGroup": [Function],
  "hasWarnings": [Function],
  "hasWarningsByGroup": [Function],
  "isValid": [Function],
  "isValidByGroup": [Function],
  "suiteName": undefined,
  "testCount": 3,
  "tests": {
    "field_1": {
      "errorCount": 1,
      "errors": [
        "field_message_1",
      ],
      "testCount": 1,
      "valid": false,
      "warnCount": 0,
      "warnings": [],
    },
    "field_2": {
      "errorCount": 1,
      "errors": [
        "rejection_message_1",
      ],
      "testCount": 2,
      "valid": false,
      "warnCount": 0,
      "warnings": [],
    },
    "field_3": {
      "errorCount": 0,
      "errors": [],
      "testCount": 0,
      "valid": false,
      "warnCount": 0,
      "warnings": [],
    },
    "field_4": {
      "errorCount": 0,
      "errors": [],
      "testCount": 0,
      "valid": false,
      "warnCount": 0,
      "warnings": [],
    },
  },
  "valid": false,
  "warnCount": 0,
}
`;

exports[`Stateful async tests Merges skipped validations from previous suite 3`] = `
{
  "errorCount": 5,
  "getError": [Function],
  "getErrors": [Function],
  "getErrorsByGroup": [Function],
  "getWarning": [Function],
  "getWarnings": [Function],
  "getWarningsByGroup": [Function],
  "groups": {
    "group": {
      "field_1": {
        "errorCount": 1,
        "errors": [
          "field_1_group_message",
        ],
        "testCount": 1,
        "valid": false,
        "warnCount": 0,
        "warnings": [],
      },
      "field_4": {
        "errorCount": 1,
        "errors": [
          "field_4_group_message",
        ],
        "testCount": 1,
        "valid": false,
        "warnCount": 0,
        "warnings": [],
      },
    },
  },
  "hasErrors": [Function],
  "hasErrorsByGroup": [Function],
  "hasWarnings": [Function],
  "hasWarningsByGroup": [Function],
  "isValid": [Function],
  "isValidByGroup": [Function],
  "suiteName": undefined,
  "testCount": 7,
  "tests": {
    "field_1": {
      "errorCount": 2,
      "errors": [
        "field_1_group_message",
        "field_message_1",
      ],
      "testCount": 2,
      "valid": false,
      "warnCount": 0,
      "warnings": [],
    },
    "field_2": {
      "errorCount": 1,
      "errors": [
        "rejection_message_1",
      ],
      "testCount": 2,
      "valid": false,
      "warnCount": 0,
      "warnings": [],
    },
    "field_3": {
      "errorCount": 1,
      "errors": [
        "field_message_3",
      ],
      "testCount": 2,
      "valid": false,
      "warnCount": 0,
      "warnings": [],
    },
    "field_4": {
      "errorCount": 1,
      "errors": [
        "field_4_group_message",
      ],
      "testCount": 1,
      "valid": false,
      "warnCount": 0,
      "warnings": [],
    },
  },
  "valid": false,
  "warnCount": 0,
}
`;
